# rust_port_cse_177_rdbms

./: .gitignore  01-catalog.sql  Cargo.toml  Untitled  all.sql  db.sqlite  notes_on_reimplementation.md  rustc-ice-2025-10-12T22_05_17-3329946.txt  rustc-ice-2025-10-12T22_05_17-3329947.txt  test-phase-2.sql
src/: catalog.rs  comparison.rs  db_file.rs  function.rs  lib.rs  main.rs  record.rs  relop.rs  schema.rs  types.rs
src/compiler/: ast.rs  grammar.lalrpop  lexer.rs  mod.rs
tests/: debug_extract_test.rs  integration_tests.rs  test_compiler.rs
