[package]
name = "rust_port"
version = "0.1.0"
edition = "2024"

[build-dependencies]
lalrpop = "0.22.2"

[dependencies]
itertools = "0.14.0"
rusqlite = { version = "0.37.0", features = ["column_decltype"] }
lalrpop-util = { version = "0.22.2", features = ["lexer", "unicode"] }
logos = "0.15.1"
anyhow = "1.0.100"

[dev-dependencies]
tempfile = "3.0"

[[bin]]
name = "test_sqlite"
path = "src/bin/test-sqlite.rs"
